<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/emergancyCallFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EmergencyCall">


    <ImageView
        android:id="@+id/imgEmergancyCall"
        android:layout_width="@dimen/_208sdp"
        android:layout_height="@dimen/_232sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_96sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:src="@drawable/emergancy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_65sdp"
        android:layout_marginRight="@dimen/_120sdp"
        android:src="@drawable/ic_redcircle"
        app:layout_constraintBottom_toTopOf="@+id/imgEmergancyCall"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/skip"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/ic_greencircle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imgEmergancyCall"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_12sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:src="@drawable/ic_brown"
        app:layout_constraintRight_toLeftOf="@+id/imgEmergancyCall"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_96sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:src="@drawable/ic_curve"
        app:layout_constraintRight_toLeftOf="@+id/imgEmergancyCall"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_96sdp"
        android:src="@drawable/ic_halfline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/skip"
        style="@style/Text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/skip"
        app:layout_constraintBottom_toTopOf="@+id/imgEmergancyCall"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/textView"
        style="@style/Main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/font_hi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEmergancyCall" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/font_onboarding"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:backgroundTint="@color/main_color"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>



</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>